# PICOIN

./: .gitattributes  .gitignore  README.md  vercel.json
picoin-layer2/picoin-forge-ai/: README.md  pyproject.toml
picoin-layer2/picoin-forge-ai/docs/: L2_DESIGN.md
picoin-layer2/picoin-forge-ai/examples/: picoin-example-job.json  run-on-picoin.sh
picoin-layer2/picoin-forge-ai/picoin_forge/: __init__.py  analyzer.py  cli.py  fixer.py  health.py  installer.py  l2_jobs.py  scanner.py  service_generator.py  utils.py
picoin-layer2/picoin-forge-ai/picoin_forge/templates/: health_check.sh.j2  install_node.sh.j2  install_python.sh.j2  systemd.service.j2
picoin-layer2/picoin-forge-ai/tests/: test_generators.py  test_l2_jobs.py  test_scanner.py
picoin-layer2/picoin-forge-l2/: .dockerignore  .env.ai.example  Dockerfile  README.md  docker-compose.ai.yml  docker-compose.yml  pyproject.toml
picoin-layer2/picoin-forge-l2/docs/: AI_WORKER_RUNBOOK.md  ARCHITECTURE.md  ECONOMICS.md  L1_SETTLEMENT.md  SECURITY.md  WORKING_ARTIFACT.md
picoin-layer2/picoin-forge-l2/picoin_forge_l2/: __init__.py
picoin-layer2/picoin-forge-l2/picoin_forge_l2/client/: __init__.py  http.py  main.py
picoin-layer2/picoin-forge-l2/picoin_forge_l2/common/: __init__.py  constants.py  crypto.py  hashing.py  models.py
picoin-layer2/picoin-forge-l2/picoin_forge_l2/coordinator/: __init__.py  ai_access_queue.py  ai_chat.py  audit.py  calibration.py  challenge_engine.py  demo.py  epoch_engine.py  federation.py  local_devnet.py  main.py  maintenance.py  reward_engine.py  score_engine.py  settlement.py  storage.py  verifier.py  worker_registry.py  workload_queue.py
picoin-layer2/picoin-forge-l2/picoin_forge_l2/worker/: __init__.py  ai_model.py  gpu.py  (+9 more)
picoin-layer2/picoin-forge-l2/tests/: test_ai_access_queue.py  test_ai_chat.py  test_ai_model_endpoint.py  test_ai_model_profile.py  test_ai_model_smoke.py  test_audit_export.py  test_auth.py  test_benchmark.py  test_challenges.py  test_coordinator_api.py  test_coordinator_cli.py  test_demo.py  test_docker_compose.py  test_federation.py  test_local_devnet.py  test_maintenance.py  test_metrics_config.py  test_rewards.py  test_score_engine.py  test_user_client.py  test_verifier.py  test_worker_config_gpu.py  test_worker_loop.py  test_workloads.py
picoin-marketplace/: .gitignore  README.md  pyproject.toml
picoin-marketplace/deploy/: README.md  install-marketplace.sh  nginx-marketplace.conf  picoin-marketplace-maintenance.service  picoin-marketplace-miner.service  picoin-marketplace-scanner.service  picoin-marketplace.env.example  picoin-marketplace.service
picoin-marketplace/picoin_marketplace/: __init__.py  api.py  hashing.py  maintenance_worker.py  marketplace.py  models.py  real_miner_agent.py  scanner_worker.py  storage.py  worker_agent.py
picoin-marketplace/tests/: test_deploy_artifacts.py  test_maintenance_worker.py  test_marketplace.py  test_real_miner_agent.py  test_scanner_worker.py  test_worker_agent.py
(+291 files in other folders)
