[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picoin-forge-ai"
version = "0.1.0"
description = "Picoin Forge AI MVP CLI for repo analysis, Linux setup planning, and simulated Layer 2 jobs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
picoin-forge = "picoin_forge.cli:app"

[tool.setuptools.packages.find]
include = ["picoin_forge*"]

[tool.setuptools.package-data]
picoin_forge = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
